-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2
-
None
-
-
8
-
Team One Foundation Sprint 50
With the fix to QTBUG-99617 something still amiss in running the pingpong example application. The client devices don't find the pingpong SDP services as don't any 3rd party tools. Tried with macOS, Linux and Android clients.
For Gerrit Dashboard: QTBUG-100042 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
390910,3 | Store the serviceinfo in pingpong example | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
390914,4 | Mark QBluetoothServer::listen() overload with [[nodiscard]] | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
391433,2 | Store the serviceinfo in pingpong example | 6.3 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
391434,2 | Store the serviceinfo in pingpong example | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
391436,2 | Mark QBluetoothServer::listen() overload with [[nodiscard]] | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
391437,2 | Mark QBluetoothServer::listen() overload with [[nodiscard]] | 6.3 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
391439,2 | Store the serviceinfo in pingpong example | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |