Store the serviceinfo in pingpong example

The service info returned by the QBluetoothServer::listen() overload
that returns it needs to be stored or otherwise it will be destroyed.

The consequence was that the SDP "advertisement" didn't properly
include the added pingpong service record on Windows.

Task-number: QTBUG-100042
Change-Id: I79cbd0f574e35bbc1c9c3123ce8382f3aad296d4
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
(cherry picked from commit debf0fd212b232bcd83c8bb8f51ba2bad2f57a1c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>